# nami-cli

./: .gitignore  .test_config.yaml  AI Agent Framework v1 Specification.md  Agent実装仕様書.md  CHANGELOG.md  Cargo.toml  README.md
.test_sessions/: 2026-07-11_14-00-00.json
docs/superpowers/plans/: 2026-06-20-ai-agent-framework-v1.md
docs/superpowers/specs/: 2026-06-20-ai-agent-framework-v1-design.md
src/: config.rs  event.rs  lib.rs  main.rs  mcp.rs  runtime.rs  session.rs  skill.rs  workflow.rs
src/agent/: executor.rs  mod.rs  planner.rs  prompt_parser.rs  tool_router.rs
src/config/: mod.rs
src/mcp/: client.rs  mod.rs
src/memory/: mod.rs
src/models/: attachment.rs  chat.rs  config.rs  message.rs  metrics.rs  mod.rs  tool.rs
src/provider/: gemini.rs  mod.rs  openai.rs
src/session/: mod.rs
src/skill/: browser.rs  external.rs  filesystem.rs  http.rs  mod.rs  registry.rs  search.rs  shell.rs
src/utils/: json.rs  logger.rs  mod.rs
