[package]
name = "nami"
version = "0.2.3"
edition = "2021"
authors = ["soashi"]
description = "Rust-only lightweight CLI AI agent framework"

[dependencies]
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json", "stream", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
clap = { version = "4.6.1", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.23.4", features = ["v4"] }
chrono = "0.4.45"
bytes = "1"
futures-util = "0.3.32"
async-trait = "0.1.89"
base64 = "0.22.1"
dotenvy = "0.15.7"
regex = "1.12.4"
sha2 = "0.10"
once_cell = "1.19"
glob = "0.3"
rmcp = { version = "1.8.0", features = ["client", "transport-io", "transport-child-process", "transport-streamable-http-client-reqwest"] }
urlencoding = "2.1.3"

[dev-dependencies]
tokio-test = "0.4.5"
